--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -2,8 +2,8 @@ name: Publish Terraform Module to Artifactory with OIDC
 
 on:
   push:
-    tags:
-      - 'v[0-9]+.[0-9]+.[0-9]+' # Trigger on semantic version tags (e.g., v1.0.0)
+    branches:
+      - main 
 
 permissions:
   id-token: write # REQUIRED: Allows the workflow to fetch the GitHub OIDC token
