--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,50 +1,52 @@
-name: Publish Terraform Module to Artifactory with OIDC
+name: "Artifactory Generic OIDC Multi-Job"
 on:
+  workflow_dispatch:
   push:
-    branches:
-      - main
-permissions:
-  id-token: write # REQUIRED: Allows the workflow to fetch the GitHub OIDC token
-  contents: read
+    # branches:
+    # - feature/*
 env:
-  JFROG_URL: https://hts2.jfrog.io
-  OIDC_PROVIDER_NAME: manu-new # Must match your Artifactory OIDC Configuration Name
+  OIDC_PROVIDER: 'manu-new'
   OIDC_AUDIENCE: 'newmanu'
+  JFROG_URL: "https://hts2.jfrog.io"
   MODULE_REPO_KEY: manu-terra-module
   MODULE_NAMESPACE: mycompany
   MODULE_PROVIDER: aws
   MODULE_NAME: my-vpc-module
+permissions:
+  contents: read
+  id-token: write
 jobs:
   publish-module:
     runs-on: ubuntu-latest
+    outputs:
+      access_token: ${{ steps.exchange_token.outputs.ACCESS_TOKEN }}  # Set output for access token
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
-      
-      # -----------------------------------------------
-      # STEP 1: Get GitHub OIDC ID Token
-      # Use GitHub's built-in id-token capability
-      # -----------------------------------------------
-      - name: Get GitHub OIDC ID Token
-        id: id_token
-        run: echo "id_token=$(echo ${{ github.token }} | jq -R '.')" >> $GITHUB_ENV
-
-      # -----------------------------------------------
-      # STEP 2: Exchange OIDC ID Token for Artifactory Access Token
-      # -----------------------------------------------
-      - name: Exchange for Artifactory Access Token
-        id: jfrog_auth
+      - name: Fetch OIDC Token
+        id: fetch_oidc_token
+        uses: jfrog/setup-jfrog-cli@v4
+        env:
+          JF_URL: ${{ env.JF_URL }}
+        with:
+          oidc-provider-name: ${{ env.OIDC_PROVIDER }}
+          oidc-audience: ${{ env.OIDC_AUDIENCE }}
+      - name: Get ID Token
+        id: get_id_token
         run: |
-          ACCESS_TOKEN=$(curl -s -X POST \
-            -H "Content-type: application/json" \
-            "${{ env.JFROG_URL }}/access/api/v1/oidc/token" \
-            -d "{\"grant_type\": \"urn:ietf:params:oauth:grant-type:token-exchange\", \"subject_token\": \"$(echo ${{ env.id_token }})\", \"subject_token_type\": \"urn:ietf:params:oauth:token-type:id_token\", \"provider_name\": \"${{ env.OIDC_PROVIDER_NAME }}\"}" \
-            | jq -r .access_token)
-          if [ -z "$ACCESS_TOKEN" ] || [ "$ACCESS_TOKEN" == "null" ]; then
-            echo "::error::Failed to retrieve Artifactory Access Token. Check OIDC configuration and identity mapping in Artifactory."
-            exit 1
-          fi
-          echo "access_token=$ACCESS_TOKEN" >> $GITHUB_OUTPUT
+          ID_TOKEN=$(curl -sLS -H "User-Agent: actions/oidc-client" -H "Authorization: Bearer $ACTIONS_ID_TOKEN_REQUEST_TOKEN" \
+          "${ACTIONS_ID_TOKEN_REQUEST_URL}&audience=github" | jq .value | tr -d '"')
+          echo "ID_TOKEN=${ID_TOKEN}" >> $GITHUB_ENV
+      - name: Exchange token with access
+        id: exchange_token  # Added an ID for this step
+        env:
+          ID_TOKEN: ${{ env.ID_TOKEN }}
+          JFROG_PLATFORM_URL: ${{ env.JFROG_URL }}
+        run: |
+          ACCESS_TOKEN=$(curl -XPOST -H "Content-Type: application/json" "https://hts2.jfrog.io/access/api/v1/oidc/token" -d "{\"grant_type\": \"urn:ietf:params:oauth:grant-type:token-exchange\", \"subject_token_type\":\"urn:ietf:params:oauth:token-type:id_token\", \"subject_token\": \"${ID_TOKEN}\", \"provider_name\": \"manu-new\"}" | jq .access_token | tr -d '"')
+          echo "::set-output name=ACCESS_TOKEN::${ACCESS_TOKEN}"  # Pass the access token as output
+
+
 
       # -----------------------------------------------
       # STEP 3: Setup JFrog CLI and Configure with Token
@@ -53,7 +55,7 @@ jobs:
         uses: jfrog/setup-jfrog-cli@v4
         with:
           # Use the token output from the previous step
-          access-token: ${{ steps.jfrog_auth.outputs.access_token }}
+          ACCESS_TOKEN: ${{ steps.jfrog_auth.outputs.access_token }}
           url: ${{ env.JFROG_URL }}
 
       # -----------------------------------------------
