--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -27,7 +27,7 @@ jobs:
         id: fetch_oidc_token
         uses: jfrog/setup-jfrog-cli@v4
         env:
-          JF_URL: ${{ env.JFROG_URL }}
+          JF_URL: ${{ env.JF_URL }}
         with:
           oidc-provider-name: ${{ env.OIDC_PROVIDER }}
           oidc-audience: ${{ env.OIDC_AUDIENCE }}
@@ -38,9 +38,35 @@ jobs:
           "${ACTIONS_ID_TOKEN_REQUEST_URL}&audience=github" | jq .value | tr -d '"')
           echo "ID_TOKEN=${ID_TOKEN}" >> $GITHUB_ENV
       - name: Exchange token with access
-        id: exchange_token
+        id: exchange_token  # Added an ID for this step
         env:
           ID_TOKEN: ${{ env.ID_TOKEN }}
           JFROG_PLATFORM_URL: ${{ env.JFROG_URL }}
         run: |
-          ACCESS_TOKEN=$(curl -XPOST -H "Content-Type: application/json" "https://hts2.jfrog.io/access/api/v1/oidc/token" -d "{\"grant_type\":
+          ACCESS_TOKEN=$(curl -XPOST -H "Content-Type: application/json" "https://hts2.jfrog.io/access/api/v1/oidc/token" -d "{\"grant_type\": \"urn:ietf:params:oauth:grant-type:token-exchange\", \"subject_token_type\":\"urn:ietf:params:oauth:token-type:id_token\", \"subject_token\": \"${ID_TOKEN}\", \"provider_name\": \"manu-new\"}" | jq .access_token | tr -d '"')
+          echo "::set-output name=ACCESS_TOKEN::${ACCESS_TOKEN}"  # Pass the access token as output
+      # -----------------------------------------------
+      # STEP 3: Setup JFrog CLI and Configure with Token
+      # -----------------------------------------------
+      - name: Setup JFrog CLI
+        uses: jfrog/setup-jfrog-cli@v4
+        with:
+          # Use the token output from the previous step
+          ACCESS_TOKEN: ${{ steps.jfrog_auth.outputs.access_token }}
+          url: ${{ env.JFROG_URL }}
+
+      # -----------------------------------------------
+      # STEP 4: Publish the Module
+      # -----------------------------------------------
+      - name: Get Tag Version
+        id: get_version
+        run: echo "VERSION=${GITHUB_REF#refs/tags/v}" >> $GITHUB_OUTPUT
+        
+      - name: Publish Terraform Module
+        run: |
+          jf tf p \
+            --repo ${{ env.MODULE_REPO_KEY }} \
+            --namespace ${{ env.MODULE_NAMESPACE }} \
+            --provider ${{ env.MODULE_PROVIDER }} \
+            --tag v${{ steps.get_version.outputs.VERSION }} \
+            --module ${{ env.MODULE_NAME }}
