--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -62,6 +62,14 @@ jobs:
         id: get_version
         run: echo "VERSION=${GITHUB_REF#refs/tags/v}" >> $GITHUB_OUTPUT
         
+      - name: Configure JFrog CLI for Terraform
+        run: |
+          jf terraform-config \
+          --repo ${{ env.MODULE_REPO_KEY }} \
+          --namespace ${{ env.MODULE_NAMESPACE }} \
+          --provider ${{ env.MODULE_PROVIDER }} \
+          --module ${{ env.MODULE_NAME }}
+        
       - name: Publish Terraform Module
         run: |
           jf tf p \
