--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -52,7 +52,7 @@ jobs:
         with:
           access-token: ${{ steps.exchange_token.outputs.ACCESS_TOKEN }}
           url: ${{ env.JFROG_URL }}
-          server-id: 'jfrog-server' # Explicitly define a known server ID
+          #server-id: 'jfrog-server' # Explicitly define a known server ID
           # This step configures the server, making 'jfrog-server' available.
 
       # ------------------------------------------------------------------
@@ -69,7 +69,7 @@ jobs:
         run: |
           jf terraform-config \
             --repo-deploy ${{ env.MODULE_REPO_KEY }} \
-            --server-id-deploy jfrog-server # <--- Explicitly use the named server config
+            #--server-id-deploy jfrog-server # <--- Explicitly use the named server config
           
       - name: Publish Terraform Module
         # This command will now use the repository configured in the step above.
