--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -7,7 +7,7 @@ on:
 env:
   OIDC_PROVIDER: 'manu-new'
   OIDC_AUDIENCE: 'newmanu'
-  JFROG_URL: "https://hts2.jfrog.io"
+  JF_URL: "https://hts2.jfrog.io"
   MODULE_REPO_KEY: 'manu-terra-module'
   MODULE_NAMESPACE: 'mycompany'
   MODULE_PROVIDER: 'aws'
@@ -36,10 +36,10 @@ jobs:
         id: exchange_token 
         env:
           ID_TOKEN: ${{ env.ID_TOKEN }}
-          JFROG_PLATFORM_URL: ${{ env.JFROG_URL }}
+          JFROG_PLATFORM_URL: ${{ env.JF_URL }}
         run: |
           # Exchange the GitHub ID Token for a JFrog Access Token.
-          ACCESS_TOKEN=$(curl -XPOST -H "Content-Type: application/json" "${JFROG_PLATFORM_URL}/access/api/v1/oidc/token" -d "{\"grant_type\": \"urn:ietf:params:oauth:grant-type:token-exchange\", \"subject_token_type\":\"urn:ietf:params:oauth:token-type:id_token\", \"subject_token\": \"${ID_TOKEN}\", \"provider_name\": \"${{ env.OIDC_PROVIDER }}\"}" | jq .access_token | tr -d '"')
+          ACCESS_TOKEN=$(curl -XPOST -H "Content-Type: application/json" "${JF_URL}/access/api/v1/oidc/token" -d "{\"grant_type\": \"urn:ietf:params:oauth:grant-type:token-exchange\", \"subject_token_type\":\"urn:ietf:params:oauth:token-type:id_token\", \"subject_token\": \"${ID_TOKEN}\", \"provider_name\": \"${{ env.OIDC_PROVIDER }}\"}" | jq .access_token | tr -d '"')
           
           # Use the modern way to set output variables
           echo "ACCESS_TOKEN=${ACCESS_TOKEN}" >> $GITHUB_OUTPUT
@@ -51,13 +51,13 @@ jobs:
         uses: jfrog/setup-jfrog-cli@v4
         with:
           access-token: ${{ steps.exchange_token.outputs.ACCESS_TOKEN }}
-          url: ${{ env.JFROG_URL }}
+          url: ${{ env.JF_URL }}
       - name: Explicitly Configure JFrog Server (jf c add)
         # FIX: Manually adding the server configuration using 'jf c add' 
         # to guarantee the 'jfrog-server' ID is available in subsequent steps.
         run: |
           jf c add jfrog-server \
-            --url ${{ env.JFROG_URL }} \
+            --url ${{ env.JF_URL }} \
             --access-token ${{ steps.exchange_token.outputs.ACCESS_TOKEN }} \
             --overwrite    
           #server-id: 'jfrog-server' # Explicitly define a known server ID
