--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -33,16 +33,13 @@ jobs:
           echo "ID_TOKEN=${ID_TOKEN}" >> $GITHUB_ENV
           
       - name: Exchange token with access
-        id: exchange_token 
+        id: exchange_token  # Added an ID for this step
         env:
           ID_TOKEN: ${{ env.ID_TOKEN }}
           JFROG_PLATFORM_URL: ${{ env.JF_URL }}
         run: |
-          # Exchange the GitHub ID Token for a JFrog Access Token.
-          ACCESS_TOKEN=$(curl -XPOST -H "Content-Type: application/json" "${JF_URL}/access/api/v1/oidc/token" -d "{\"grant_type\": \"urn:ietf:params:oauth:grant-type:token-exchange\", \"subject_token_type\":\"urn:ietf:params:oauth:token-type:id_token\", \"subject_token\": \"${ID_TOKEN}\", \"provider_name\": \"${{ env.OIDC_PROVIDER }}\"}" | jq .access_token | tr -d '"')
-          
-          # Use the modern way to set output variables
-          echo "ACCESS_TOKEN=${ACCESS_TOKEN}" >> $GITHUB_OUTPUT
+          ACCESS_TOKEN=$(curl -XPOST -H "Content-Type: application/json" "https://hts2.jfrog.io/access/api/v1/oidc/token" -d "{\"grant_type\": \"urn:ietf:params:oauth:grant-type:token-exchange\", \"subject_token_type\":\"urn:ietf:params:oauth:token-type:id_token\", \"subject_token\": \"${ID_TOKEN}\", \"provider_name\": \"manu-new\"}" | jq .access_token | tr -d '"')
+          echo "::set-output name=ACCESS_TOKEN::${ACCESS_TOKEN}"  # Pass the access token as output
           
       # ------------------------------------------------------------------
       # STEP 3: Setup JFrog CLI and Configure with Token
